force-app/main/default/objects/Case_Status_Metric__c/fields/Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Status__c</fullName>
    <label>Case Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>