force-app/main/default/objects/Case_Status_Metric__c/fields/Owner_Case__c.field-meta.xml
<CustomField>
    <fullName>Owner_Case__c</fullName>
    <label>Case Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>