force-app/main/default/objects/Case_Status_Metric__c/fields/Status_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Status_End_Time__c</fullName>
    <label>Status End Time</label>
    <type>DateTime</type>
</CustomField>