force-app/main/default/objects/Case_Status_Metric__c/fields/Status_Metric__c.field-meta.xml
<CustomField>
    <fullName>Status_Metric__c</fullName>
    <formula>8*((5*FLOOR((DATEVALUE(Status_End_Time__c )-DATE(1900,1,8))/7) + MIN(5, MOD(DATEVALUE(Status_End_Time__c )-DATE(1900,1,8),7)+ MIN(1,24/8*(MOD(Status_Start_Time__c   -DATETIMEVALUE(&apos;1900-01-08 13:30:00&apos;), 1))) )) - (5*FLOOR((DATEVALUE(Status_Start_Time__c  + MAX(DATETIMEVALUE(TEXT(DATEVALUE(Status_Start_Time__c ))&amp;&quot; 13:30:00&quot;)-Status_Start_Time__c ,0))- DATE(1900,1,8))/7)+ MIN(5, MOD(DATEVALUE(Status_Start_Time__c +MAX(DATETIMEVALUE(TEXT(DATEVALUE(Status_Start_Time__c ))&amp;&quot; 13:30:00&quot;)-Status_Start_Time__c ,0))-DATE(1900,1,8),7)+ MIN(1,24/8*(MOD(Status_Start_Time__c  + MAX(DATETIMEVALUE(TEXT(DATEVALUE(Status_Start_Time__c ))&amp;&quot; 13:30:00&quot;)-Status_Start_Time__c ,0)-DATETIMEVALUE(&apos;1900-01-08 13:30:00&apos;), 1))))) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Metric</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>