force-app/main/default/objects/Case_Status_Metric__c/fields/Status_Time__c.field-meta.xml
<CustomField>
    <fullName>Status_Time__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Status Time</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>